--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
   "license": "ISC",
   "description": "This is a  bike shop project.",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.7",
     "winston": "^3.17.0",
@@ -29,13 +31,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.9.1",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
     "eslint-define-config": "^2.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "ts-node-dev": "^2.0.0",
