feat: added user model & interface

--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "description": "This is a  bike shop project.",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -31,7 +31,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
