--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "@stripe/stripe-js": "^5.6.0",
     "isbot": "^5.1.17",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
