--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.8.2",
     "ms": "^2.1.3",
     "nodemon": "^3.1.7",
+    "stripe": "^17.6.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
