--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "isbot": "^5.1.17",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
