--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@mjackson/form-data-parser": "^0.7.0",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "@stripe/stripe-js": "^5.6.0",
