--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "@stripe/stripe-js": "^5.6.0",
+    "@vercel/node": "^5.1.7",
+    "@vercel/react-router": "^1.0.2",
     "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.7",
     "isbot": "^5.1.17",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
@@ -21,7 +24,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
