--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "react-router-serve ./build/server/nodejs-eyJydW50aW1lIjoibm9kZWpzIn0/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -13,10 +13,9 @@
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "@stripe/stripe-js": "^5.6.0",
-    "@vercel/node": "^5.1.7",
-    "@vercel/react-router": "^1.0.2",
     "cloudinary": "^2.5.1",
-    "dotenv": "^16.4.7",
+    "fs-extra": "^11.3.0",
+    "glob": "^11.0.1",
     "isbot": "^5.1.17",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
@@ -24,8 +23,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "react-router": "^7.1.5",
-    "vite-plugin-vercel": "^9.0.5"
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
@@ -34,6 +32,8 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@vercel/node": "^5.1.8",
+    "@vercel/react-router": "^1.0.2",
     "daisyui": "^5.0.0-beta.8",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
