--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/nodejs-eyJydW50aW1lIjoibm9kZWpzIn0/index.js",
+    "build": "react-router build && node vercel/prepare.js",
+    "dev": "cross-env NODE_ENV=development node ./dev-server.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@mjackson/form-data-parser": "^0.7.0",
+    "@react-router/express": "^7.2.0",
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
     "@stripe/stripe-js": "^5.6.0",
+    "@vercel/node": "^5.1.8",
+    "@vercel/react-router": "^1.0.2",
     "cloudinary": "^2.5.1",
+    "express": "^4.21.2",
     "isbot": "^5.1.17",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
@@ -30,7 +33,6 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "@vercel/react-router": "^1.0.2",
     "daisyui": "^5.0.0-beta.8",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
