--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@vercel/node": "^5.1.8",
     "@vercel/react-router": "^1.0.2",
     "cloudinary": "^2.5.1",
+    "cross-env": "^7.0.3",
     "express": "^4.21.2",
     "isbot": "^5.1.17",
     "js-cookie": "^3.0.5",
