docs: updated readme file & .env.example flies

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,11 @@
-NODE_ENV=development
-PORT=3000
-VITE_API_URL=http://localhost:8000
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test
+# url
+VITE_API_URL=http://localhost:8080/api (/api must be added to the url)
+VITE_CLIENT_URL=http://localhost:3000
+
+# stripe
+VITE_STRIPE_PUBLIC_KEY=pk_test_test
+VITE_STRIPE_SECRET_KEY=sk_test_test
+# cloudinary
+VITE_CLOUDINARY_CLOUD_NAME=test
+VITE_CLOUDINARY_API_KEY=test
+VITE_CLOUDINARY_API_SECRET=tets
