--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "build": "react-router build && node vercel/prepare.js",
     "dev": "cross-env NODE_ENV=development node ./dev-server.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write . --ignore-path .prettierignore",
+    "format:check": "prettier --check . --ignore-path .prettierignore",
+    "clean": "rm -rf build node_modules && pnpm install"
   },
   "dependencies": {
     "@mjackson/form-data-parser": "^0.7.0",
@@ -15,7 +20,9 @@
     "@stripe/stripe-js": "^5.6.0",
     "@vercel/node": "^5.1.8",
     "@vercel/react-router": "^1.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "express": "^4.21.2",
     "isbot": "^5.1.17",
@@ -26,19 +33,35 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@react-router/dev": "^7.1.5",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/express": "^5.0.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "daisyui": "^5.0.0-beta.8",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.29.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
