--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@mjackson/form-data-parser": "^0.7.0",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-router/express": "^7.2.0",
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
