--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
