--- a/client/package.json
+++ b/client/package.json
@@ -35,11 +35,13 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.9.4",
     "nanoid": "^5.1.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0"
   },
