--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mjackson/form-data-parser": "^0.7.0",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
