--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "clean": "rm -rf build node_modules && pnpm install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@mjackson/form-data-parser": "^0.7.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-router/express": "^7.2.0",
@@ -39,12 +41,14 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
     "sonner": "^2.0.3",
     "swiper": "^11.2.6",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
