--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@react-router/express": "^7.2.0",
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^5.6.0",
     "@vercel/node": "^5.1.8",
     "@vercel/react-router": "^1.0.2",
@@ -49,6 +50,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
     "sonner": "^2.0.3",
+    "stripe": "^18.1.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
