--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@react-router/express": "^7.2.0",
     "@react-router/node": "^7.1.3",
@@ -49,6 +50,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
     "swiper": "^11.2.6",
